objects/PanayaIA__Integration_Field__c.object
<CustomObject>
    <fields>
        <fullName>PanayaIA__Data_Flow_From_System__c</fullName>
        <label>Data Flow - From System</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PanayaIA__Data_Flow_To_System__c</fullName>
        <label>Data Flow - To System</label>
        <picklist>
            <picklistValues>
                <fullName>Data Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PanayaIA__Field_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanayaIA__Integration_Name__c</fullName>
        <label>Integration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanayaIA__Object_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ChangeGuru Integration field</label>
    <listViews>
        <fullName>PanayaIA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIF-{00000}</displayFormat>
        <label>API Critical Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChangeGuru Integration fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>